update graddle wrapper and run rx test with junit5 use idea not gradle